--- a/img/actividad.html
+++ b/img/actividad.html
@@ -18,7 +18,7 @@
         </nav>
         <section class="textos-videos">
             <br><br><h3>Video de actividad</h3><br>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/htdnfkwnl_s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="60%" height="315" src="https://www.youtube.com/embed/htdnfkwnl_s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
     </header>
 </body>
