--- a/img/clase.html
+++ b/img/clase.html
@@ -18,7 +18,7 @@
         </nav>
         <section class="textos-videos">
             <br><br><h3>Video de clase</h3><br>
-            <iframe width="60%" height="315" src="https://www.youtube.com/embed/WIIGlTeladI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>>
+            <iframe width="60%" height="315" src="https://youtu.be/ydIr29KpUWY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>>
         </section>
     </header>
 </body>
